--- a/dscan/sites/all/themes/bootstrap_dscan/css/style.css
+++ b/dscan/sites/all/themes/bootstrap_dscan/css/style.css
@@ -122,3 +122,17 @@ img {
 .vvv{
   opacity:1;
 }
+
+.carousel-caption {
+  left: 5%;
+  right: 40%;
+  padding-bottom: 30px;
+}
+
+.carousel-caption {
+  color: #ffffff;
+  text-align: justify;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+}
+
+
