--- a/dscan/sites/all/themes/bootstrap_dscan/css/style.css
+++ b/dscan/sites/all/themes/bootstrap_dscan/css/style.css
@@ -13,7 +13,10 @@
   margin-bottom : 0;
 }
 
-
+.row {
+  margin-left: 0;
+  margin-right: 0;
+}
 
 .btn-default {
   border: 1px solid #42DCA3;
@@ -57,15 +60,17 @@ h2 {
 
 p {
   margin: 0 0 25px;
-  font-size: 18px;
+  font-size: 1.25rem;
+  font-weight: 300;
   line-height: 1.5;
+  /*text-align: justify;*/
 }
-@media (min-width: 768px) {
-  p {
-    margin: 0 0 35px;
-    font-size: 20px;
-    line-height: 1.6;
-  }
+
+.col-md-7 {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 58.333333%;
+  flex: 0 0 58.333333%;
+  max-width: 90%;
 }
 
 
@@ -136,3 +141,22 @@ img {
 }
 
 
+html {
+  font-size: 20px;
+}
+.unbehaved-element {
+  font-size: 2em;
+}
+@media(max-width: 1580px) {
+  html {
+    font-size: 18px;
+  }
+  .unbehaved-element {
+    font-size: 1.9em; /* Fine tune unbehaved elements */
+  }
+}
+@media(max-width: 980px) {
+  html {
+    font-size: 16px;
+  }
+}
