--- a/dscan/sites/all/themes/bootstrap_dscan/css/style.css
+++ b/dscan/sites/all/themes/bootstrap_dscan/css/style.css
@@ -258,8 +258,10 @@ html {
 
 
 body.navbar-is-fixed-top {
-  padding-top: 46px;
+  padding-top: 45px;
 }
 
 
-
+body.admin-menu.navbar-is-fixed-top {
+  padding-top: 0px;
+}
